[package]
name = "ferrocp-sync"
description = "Intelligent incremental synchronization for FerroCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrocp-types = { path = "../ferrocp-types", features = ["async"] }
ferrocp-config = { path = "../ferrocp-config" }

# Async runtime
tokio = { workspace = true, features = ["fs", "io-util", "macros", "time"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Hashing and checksums
blake3 = { version = "1.5", default-features = false }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
bincode = { version = "1.3" }

# File system operations
walkdir = { version = "2.4" }
filetime = { workspace = true }

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
