[package]
name = "ferrocp-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests and benchmarks for FerroCP"
authors = ["longhao <hal.long@outlook.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/loonghao/ferrocp"
documentation = "https://docs.rs/ferrocp-tests"
readme = "README.md"
keywords = ["file-copy", "performance", "testing", "benchmarks"]
categories = ["filesystem", "development-tools::testing"]

# This is a test-only crate, not published
publish = false

# Disable automatic example discovery to avoid cross-compilation issues
autoexamples = false

# Features for conditional compilation
[features]
default = []
# Feature to enable examples that may not work in cross-compilation
native-only = []

# Integration tests configuration
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

# Example configuration - only build on native platforms
[[example]]
name = "usage_example"
path = "examples/usage_example.rs"
required-features = ["native-only"]

# Performance benchmarks configuration
[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "micro_copy_benchmark"
harness = false

[[bench]]
name = "comprehensive_benchmark_suite"
harness = false

[[bench]]
name = "preread_benchmark"
harness = false

[[bench]]
name = "concurrency_benchmarks"
harness = false

[[bench]]
name = "function_level_benchmarks"
harness = false

[[bench]]
name = "memory_efficiency_benchmarks"
harness = false

[[bench]]
name = "syscall_efficiency_benchmarks"
harness = false

[[bench]]
name = "micro_benchmarks"
harness = false

[dependencies]
# Core FerroCP crates
ferrocp-types = { path = "../ferrocp-types" }
ferrocp-io = { path = "../ferrocp-io" }
ferrocp-compression = { path = "../ferrocp-compression" }
ferrocp-config = { path = "../ferrocp-config" }
ferrocp-engine = { path = "../ferrocp-engine" }
ferrocp-sync = { path = "../ferrocp-sync" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Testing utilities
tempfile = { workspace = true }
futures = { workspace = true }

# Benchmarking
criterion = { workspace = true, features = ["html_reports"] }

# Serialization for benchmark configuration
serde = { workspace = true }
serde_json = "1.0"

# Additional testing dependencies
tokio-test = { workspace = true }
proptest = { workspace = true }
